--- a/ollama RPG.ipynb
+++ b/ollama RPG.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,21 +44,22 @@
     "import ollama # pega a lista de modelos que tem disponivel localmente no sistema\n",
     "import json # se precisar manipular json\n",
     "import html # para corrigir algumas saidas que vem com códigos de escape HTML, algo como &quot que representa \" (aspas duplas).\n",
-    "import os"
+    "import os\n",
+    "from chaves import groq_api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"GROQ_API_KEY\"] = \"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\""
+    "os.environ[\"GROQ_API_KEY\"] = groq_api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
        "'llama3.2:3b-instruct-q8_0'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +688,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m cenas \u001b[38;5;241m=\u001b[39m cenas_aleatorias() \u001b[38;5;66;03m# Seleciona os locais e persoanges/eventos para as cenas\u001b[39;00m\n\u001b[1;32m      4\u001b[0m personagens \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m personagem \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcenas\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[1;32m      6\u001b[0m     personagens \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpersonagem[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m locais \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "Cell \u001b[0;32mIn[15], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m cenas \u001b[38;5;241m=\u001b[39m cenas_aleatorias() \u001b[38;5;66;03m# Seleciona os locais e persoanges/eventos para as cenas\u001b[39;00m\n\u001b[1;32m      4\u001b[0m personagens \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m personagem \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcenas\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[1;32m      6\u001b[0m     personagens \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpersonagem[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m locais \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
       "\u001b[0;31mKeyError\u001b[0m: 1"
      ]
     }
@@ -1746,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1755,18 +1756,20 @@
      "text": [
       "Descrisão do Cenário:\n",
       "- Tema principal: Fantasy\n",
-      "- Problema que aconteceu: Uma peste mágica se espalha.\n",
-      "- O que precisa ser feito: Resistir bravamente ao perigo. \n",
-      "- Consequências: O mundo será destruído.\n",
-      "- Ambientação: (Misteriosa) Sob um céu perpetuamente crepuscular, onde a linha entre o real e o fantástico se esvai, você se aventura por um mundo repleto de perigos ocultos e maravilhas etéreas, explorando masmorras amaldiçoadas e confrontando criaturas grotescas que espreitam nas sombras.\n",
+      "- Problema que aconteceu: Uma grande disputa iniciou.\n",
+      "- O que precisa ser feito: Chegar em um local remoto. \n",
+      "- Consequências: Uma noite eterna começará.\n",
+      "- Ambientação: (Épica) Em um reino onde a magia floresce e ruínas antigas sussurram segredos de eras passadas, você trilha seu caminho como um aventureiro, desbravando masmorras sombrias e enfrentando feras lendárias em busca de glória e tesouros esquecidos.\n",
       "\n",
-      "Titulo: Uma Peste Mágica Ameaça o Mundo\n",
-      "Tema: Fantasia Épica\n",
-      "Style: Sombrio\n",
+      "Titulo: A Bênção da Magia\n",
+      "Tema: Fantasia Epica\n",
+      "Style: Sombrio e heroico\n",
       "Summary:\n",
-      "A peste mágica se espalha rapidamente pelo mundo, ameaçando destruir tudo. Para resistir ao perigo,\n",
-      "é necessário encontrar a causa da peste e combater a força misteriosa por trás dela. Se\n",
-      "fracassarmos, o mundo será destruído e a magicidade desaparecerá.\n"
+      "Uma disputa selvagem entre os poderosos mágicos do reino acaba de começar, e uma grande noite eterna\n",
+      "está prestes a cair em cima do planeta. Para evitar a catastrófica luz da meia-noite eterna, você\n",
+      "precisa chegar ao local remoto onde a misteriosa fonte da magia é localizada não tempos para cima da\n",
+      "grande noite. Se aventureiro falhar em interceptar a fonte da magia, o planeta será condenado a uma\n",
+      "escuridão eterna.\n"
      ]
     }
    ],
@@ -1825,27 +1828,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Introduction': {'lugar': 'um acampamento',\n",
+       "{'Introduction': {'lugar': 'uma paisagem magnífica',\n",
        "  'evento': None,\n",
-       "  'personagem': 'uma pessoa traiçoeira'},\n",
-       " 'Development': {'lugar': 'um reino grande',\n",
+       "  'personagem': 'um mensageiro'},\n",
+       " 'Development': {'lugar': 'um outro plano de existência',\n",
        "  'evento': None,\n",
-       "  'personagem': 'uma pessoa traiçoeira'},\n",
-       " 'Preparatory Climax': {'lugar': 'um local sagrado',\n",
-       "  'evento': None,\n",
-       "  'personagem': 'uma pessoa familiar'},\n",
-       " 'Climax': {'lugar': 'um local ermo',\n",
-       "  'evento': None,\n",
-       "  'personagem': 'um jovem escudeiro'}}"
+       "  'personagem': 'um artefato inteligente'},\n",
+       " 'Preparatory Climax': {'lugar': 'um labirinto',\n",
+       "  'evento': 'Os servos do Vilão estão aqui',\n",
+       "  'personagem': None},\n",
+       " 'Climax': {'lugar': 'uma tribo selvagem',\n",
+       "  'evento': 'Os servos do Vilão estão aqui',\n",
+       "  'personagem': None}}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,53 +1914,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "locais: 8\n",
-      "personagens: 4\n"
+      "locais: 6\n",
+      "personagens: 2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'characters': [{'first_name': 'Auremagnus',\n",
-       "   'last_name': 'Fulgus',\n",
-       "   'role': 'uma pessoa traiçoeira'},\n",
-       "  {'first_name': 'Dominnox',\n",
-       "   'last_name': 'Igis',\n",
-       "   'role': 'uma pessoa traiçoeira'},\n",
-       "  {'first_name': 'Paxius',\n",
-       "   'last_name': 'Luminaris',\n",
-       "   'role': 'uma pessoa familiar'},\n",
-       "  {'first_name': 'Corvallus',\n",
-       "   'last_name': 'Vitalis',\n",
-       "   'role': 'um jovem escudeiro'}],\n",
+       "   'last_name': 'Ignarius',\n",
+       "   'role': 'Mensageiro'},\n",
+       "  {'first_name': 'Flavidari',\n",
+       "   'last_name': 'Tempestix',\n",
+       "   'role': 'Artefato inteligente'}],\n",
        " 'locations': [{'first_word': 'Castrum',\n",
-       "   'second_word': 'Auremagnus',\n",
-       "   'type': 'um grande reino'},\n",
-       "  {'first_word': 'Urbs',\n",
-       "   'second_word': 'Luminaris',\n",
-       "   'type': 'uma vila pequena'},\n",
-       "  {'first_word': 'Campus', 'second_word': 'Flavius', 'type': 'um acampamento'},\n",
-       "  {'first_word': 'Regnum', 'second_word': 'Ignis', 'type': 'um reino grande'},\n",
-       "  {'first_word': 'Tempus',\n",
-       "   'second_word': 'Erebus',\n",
-       "   'type': 'um local sagrado'},\n",
-       "  {'first_word': 'Desolatus',\n",
-       "   'second_word': 'Caelius',\n",
-       "   'type': 'um local ermo'},\n",
-       "  {'first_word': 'Urbs', 'second_word': 'Dominus', 'type': 'um grande reino'},\n",
-       "  {'first_word': 'Villa',\n",
+       "   'second_word': 'Douradomagnus',\n",
+       "   'type': 'Paisagem magnífica'},\n",
+       "  {'first_word': 'Via',\n",
        "   'second_word': 'Lucius',\n",
-       "   'type': 'uma vila pequena'}]}"
+       "   'type': 'Outro plano de existência'},\n",
+       "  {'first_word': 'Porta', 'second_word': 'Labirintior', 'type': 'Labirinto'},\n",
+       "  {'first_word': 'Tribe',\n",
+       "   'second_word': 'Flavidarienus',\n",
+       "   'type': 'Tribo selvagem'},\n",
+       "  {'first_word': 'Regnum', 'second_word': 'Dominior', 'type': 'Grande reino'},\n",
+       "  {'first_word': 'Vila', 'second_word': 'Lucianus', 'type': 'Vila pequena'}]}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2020,6 +2011,9 @@
     "   - **Characters:** \"Auremagnus Ignis\" (grande fogo), \"Corarius Fulg\" (guardião brilhante).\n",
     "   - **Locations:** \"Castrum Auremagnus\" (fortaleza dourada), \"Via Tenebris\" (estrada sombria).\n",
     "9. Gere um nome diferentes para todos os personagens e lugares informados.\n",
+    "\n",
+    "## Tarefa:\n",
+    "Com base nas instruções fornecidas e na tabela de elementos, gere um nome para cada personagem e local informado.\n",
     "\n",
     "## Saída:\n",
     "Você deve responder em formato JSON seguindo o seguinte esquema:\\n\"\"\"\n",
