--- a/ollama RPG.ipynb
+++ b/ollama RPG.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "'llama3.2:3b-instruct-q8_0'"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[113], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m cenas \u001b[38;5;241m=\u001b[39m cenas_aleatorias() \u001b[38;5;66;03m# Seleciona os locais e persoanges/eventos para as cenas\u001b[39;00m\n\u001b[1;32m      4\u001b[0m personagens \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m personagem \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcenas\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[1;32m      6\u001b[0m     personagens \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpersonagem[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m locais \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "Cell \u001b[0;32mIn[13], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m cenas \u001b[38;5;241m=\u001b[39m cenas_aleatorias() \u001b[38;5;66;03m# Seleciona os locais e persoanges/eventos para as cenas\u001b[39;00m\n\u001b[1;32m      4\u001b[0m personagens \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m personagem \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcenas\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[1;32m      6\u001b[0m     personagens \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpersonagem[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m locais \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
       "\u001b[0;31mKeyError\u001b[0m: 1"
      ]
     }
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1632,18 +1632,19 @@
      "text": [
       "Descrisão do Cenário:\n",
       "- Tema principal: Fantasy\n",
-      "- Problema que aconteceu: Uma estranha torre surgiu do nada.\n",
-      "- O que precisa ser feito: Caçar um monstro. \n",
-      "- Consequências: O mundo será destruído.\n",
+      "- Problema que aconteceu: As divindades desapareceram.\n",
+      "- O que precisa ser feito: Buscar um componente raro. \n",
+      "- Consequências: A fome tomará o mundo.\n",
       "- Ambientação: (Ação) O mundo clama por heróis! Empunhando sua arma e sua coragem, você se lança em uma jornada através de terras assoladas por monstros e armadilhas mortais, invadindo masmorras repletas de tesouros e provando seu valor contra inimigos formidáveis.\n",
       "\n",
-      "Titulo: A Torre do Destino\n",
-      "Tema: Fantasia Épica\n",
-      "Style: Sombrío\n",
+      "Titulo: Desaparecimento dos Deuses\n",
+      "Tema: Fantasiañtica e Epica\n",
+      "Style: Heroico e Sombrio\n",
       "Summary:\n",
-      "Uma estranha torre surgiu do nada, causando desespero e medo em todo o reino. Para evitar a\n",
-      "destruição do mundo, é necessário caçar e derrotar o monstro que a construiu. Se falhar, as\n",
-      "consequências serão catastróficas: cidades incendiadas, florestas devastadas e o fim da humanidade.\n"
+      "No mundo clama por heróis, as divindades desapareceram levando a uma era de escuridôn. O problema\n",
+      "que aconteceu foi o desaparecimento dos deuses que mantinham o equilírio do mundo. Para resolver\n",
+      "esse problema, um componente raro precisa ser encontrado para restaurar a luz divina. Se essa tarefa\n",
+      "falhar, a fome tomaré o mundo, levando a uma era de desolação e destruiçôes.\n"
      ]
     }
    ],
@@ -1691,6 +1692,82 @@
     "print(f\"Tema: {general_context.theme}\")\n",
     "print(f\"Style: {general_context.style}\")\n",
     "print(f\"Summary:\\n{dividir_texto_em_linhas(general_context.summary, 100)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ideias': [{'numero': '01',\n",
+       "   'ideia': 'Os heróis precisam encontrar o componente raro para restaurar a luz divina'},\n",
+       "  {'numero': '02',\n",
+       "   'ideia': 'O mundo clama por heróis, as divindades desapareceram levando a uma era de escuridôn'},\n",
+       "  {'numero': '03',\n",
+       "   'ideia': 'Um grupo de bandidos está tentando controlar o mundo sem os deuses'},\n",
+       "  {'numero': '04',\n",
+       "   'ideia': 'Os heróis precisam enfrentar suas próprias demonologias para superar o desafio'},\n",
+       "  {'numero': '05',\n",
+       "   'ideia': 'A aventura começa com um encontro mágico que revela a natureza do problema'},\n",
+       "  {'numero': '06',\n",
+       "   'ideia': 'Os heróis precisam reunir uma equipe de habilidades específicas para superar os desafios'},\n",
+       "  {'numero': '07',\n",
+       "   'ideia': 'O mundo é dividido em reinos, e cada reino tem seu próprio problema a ser resolvido'},\n",
+       "  {'numero': '08',\n",
+       "   'ideia': 'Os heróis precisam enfrentar criaturas mágicas para alcançar seus objetivos'},\n",
+       "  {'numero': '09',\n",
+       "   'ideia': 'A jornada começa em um pequeno vilarejo, onde os heróis são procurados por suas habilidades'},\n",
+       "  {'numero': '10',\n",
+       "   'ideia': 'Os heróis precisam superar desafios de luta para demonstrar sua habilidade e capacidade'}]}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "premisa = f\"\"\"Titulo: {general_context.title}\n",
+    "Tema: {general_context.theme}\")\n",
+    "Style: {general_context.style}\")\n",
+    "Summary:\\n{dividir_texto_em_linhas(general_context.summary, 100)}\"\"\"\n",
+    "\n",
+    "system_prompt = \"\"\"Voce é um Dungeon Master especialista em one-shot para Role-Playing Game.\"\"\"\n",
+    "\n",
+    "ideias_prompt = f\"\"\"## Cenário:\n",
+    "{premisa}\n",
+    "\n",
+    "## Instruções:\n",
+    "1. Com base no cenário, crie um Brainstorming de ideias de assuntos para a aventura.\n",
+    "2. Crie uma lista com todas as ideias criadas.\n",
+    "3. Crie pelo menos 50 ideias para a aventura.\n",
+    "\n",
+    "## Saida\n",
+    "Você deve responder em formato JSON seguindo o seguinte esquema:\\n\"\"\"\n",
+    "\n",
+    "ideia_schema = \"\"\"\n",
+    "{\n",
+    "  \"ideias\": [\n",
+    "    {\n",
+    "      \"numero\": \"um número para identificar a ideia.\",\n",
+    "      \"ideia\": \"A ideia para a aventura.\"\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "class idiea(BaseModel):\n",
+    "    numero: str\n",
+    "    ideia: str\n",
+    "\n",
+    "class Ideias(BaseModel):\n",
+    "    ideias: List[idiea]\n",
+    "\n",
+    "res = model_response(system_prompt, ideias_prompt, ideia_schema, Ideias)\n",
+    "res.model_dump()"
    ]
   },
   {
